<resources>
    <string name="app_name">WeatherFA</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="city_settings">Cities</string>

    <string name="menu_weather">天气</string>
    <string name="menu_userinfo">修改用户名或密码</string>
    <string name="menu_setting">后台更新频率</string>
    <string name="menu_feedback">反馈与建议</string>
    <string name="menu_about">关于</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_settings">Settings</string>

    <string name="city_management_edit">编辑</string>
    <string name="city_management_del">Delete wtCity</string>
    <string name="city_management_add">Add wtCity</string>
    <string name="picked_city_tv">选择的城市</string>


    <string name="cur_city_text">当前城市</string>
    <string name="hot_city_cb">指定热门城市</string>
    <string name="enable_anim_cb">启用动画效果</string>
    <string name="anim_cb">自定义动画</string>
    <string name="textview1">点击更换：</string>
    <string name="button1">默认主题</string>
    <string name="pick_button">选择城市</string>

    <string name="content_description_default">Image description</string>
    <!--history-->
    <string name="h_line">温度变化分析</string>
    <string name="h_histogram">历史天气统计</string>
    <string name="h_wind">风力风向统计</string>


    <!--wt_now-->
    <string name="update_time_tv">更新时间:17:00</string>
    <string name="wt_type_tv">晴</string>
    <string name="wt_temp_tv">15℃</string>
    <string name="w_m_d_tv">周日,4月7日</string>
    <!--wt_detail-->
    <string name="d_title_tv">Detail title.</string>
    <string name="d_info_tv">Detail info.</string>

    <string name="action_settings">Settings</string>
    <string name="separator">/</string>

    <!--登录注册-->
    <string name="iv_project_icon">项目图标</string>
    <string name="account">手机号</string>
    <string name="plesase_input_account">请输入手机号</string>
    <string name="password">密码</string>
    <string name="plesase_input_password">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="go_to_registe">注册</string>
    <string name="if_login_is_meaning_to_geree">登录即代表同意 </string>
    <string name="the_service"> 用户协议</string>
    <string name="third_method_login">第三方登录</string>
    <string name="iv_third_method1">第三方登录方式一</string>
    <string name="iv_third_method2">第三方登录方式二</string>
    <string name="iv_third_method3">第三方登录方式三</string>
    <string name="tv_register">用户注册</string>
    <string name="tv_phone">手机号</string>
    <string name="et_phone">请输入手机号</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="tv_code">验证码</string>
    <string name="et_code">请输入验证码</string>
    <string name="tv_name">昵称</string>
    <string name="et_name">请输入用户昵称</string>
    <string name="tv_gender">性别</string>
    <string name="et_gender">1代表男性 2代表女性</string>
    <string name="tv_age">年龄</string>
    <string name="et_age">请输入年龄</string>
    <string name="tv_password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="et_password2">请再次输入密码</string>
    <string name="bt_register">提交注册</string>
    <string name="tv_count_down">跳过</string>

    <string name="edit_name">修改昵称</string>
    <string name="edit_name_tv">请输入昵称</string>
    <string name="edit_finish_bt">提交修改</string>
    <string name="edit_pwd">修改密码</string>
    <string name="edit_pwd_origin_tv">请输入原密码</string>
    <string name="edit_pwd1_tv">请输入新密码</string>

    <!--HWtStatisticsActivity-->
    <string name="query_bt">点击选择起止日期</string>
    <string name="to">至</string>
    <string name="save_item">存储至相册</string>
    <string name="change_type1">查看风力</string>
    <string name="change_type2">查看风向</string>

</resources>
