<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="@string/menu_userinfo"
    app:startDestination="@id/nav_weather">

    <fragment
        android:id="@+id/nav_weather"
        android:name="com.example.weatherfa.ui.weather.WeatherFragment"
        android:label="@string/menu_weather"
        tools:layout="@layout/fragment_weather"></fragment>

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.example.weatherfa.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.weatherfa.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_userinfo"
        android:name="com.example.weatherfa.ui.userinfo.UserinfoFragment"
        android:label="@string/menu_userinfo"
        tools:layout="@layout/fragment_userinfo" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.weatherfa.ui.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" >
        <action
            android:id="@+id/action_SettingFragment_to_WeatherFragment"
            app:destination="@id/nav_weather" />
    </fragment>

</navigation>