<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.userinfo.UserinfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_name" />

        <EditText
            android:id="@+id/edit_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edit_name_tv"
            android:inputType="textPersonName"
            android:singleLine="true"
            tools:targetApi="o" />

        <Button
            android:id="@+id/edit_finish1_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/edit_finish_bt" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/edit_pwd" />

        <EditText
            android:id="@+id/edit_pwd_origin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edit_pwd_origin_tv"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edit_pwd1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_password"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/edit_pwd2_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/et_password2"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            tools:targetApi="o" />

        <Button
            android:id="@+id/edit_finish2_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="32dp"
            android:text="@string/edit_finish_bt" />
    </LinearLayout>

    </ScrollView>
</FrameLayout>